--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "repository": "artcom/acms-api",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint src test",
+    "format": "prettier src test --write",
+    "lint": "eslint src test --fix",
     "start": "node src/index.js",
     "test": "jest",
     "test:watch": "jest --watch --verbose",
@@ -13,15 +14,15 @@
     "debug": "node --inspect-brk src/index.js"
   },
   "engines": {
-    "node": "14.18.1"
+    "node": "14.19.1"
   },
   "dependencies": {
     "bunyan": "^1.8.15",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "fs-extra": "^10.0.0",
-    "json5": "^2.2.0",
+    "express": "^4.17.3",
+    "fs-extra": "^10.1.0",
+    "json5": "^2.2.1",
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.isplainobject": "^4.0.6",
@@ -29,17 +30,18 @@
     "lodash.mapkeys": "^4.6.0",
     "lodash.pickby": "^4.6.0",
     "lodash.set": "^4.3.2",
-    "minimatch": "^3.0.4",
+    "minimatch": "^5.0.1",
     "nodegit": "^0.27.0",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
-    "eslint-config-artcom": "^0.11.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.4",
-    "jest": "^27.3.1",
-    "nodemon": "^2.0.14",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "prettier": "2.6.2",
     "tmp": "^0.2.1"
   }
 }
