--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": "16.17.0"
   },
   "dependencies": {
+    "@artcom/logger": "^1.5.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
